# pkg/api/openapi/mediator/v1/mediator.swagger.json
@@ -2260,14 +2260,14 @@
         ]
       }
     },
-    "/api/v1/user/email/{email}": {
+    "/api/v1/user/subject/{subject}": {
       "get": {
-        "operationId": "UserService_GetUserByEmail",
+        "operationId": "UserService_GetUserBySubject",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/v1GetUserByEmailResponse"
+              "$ref": "#/definitions/v1GetUserBySubjectResponse"
             }
           },
           "default": {
@@ -2279,101 +2279,7 @@
         },
         "parameters": [
           {
-            "name": "email",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "tags": [
-          "UserService"
-        ]
-      }
-    },
-    "/api/v1/user/password": {
-      "post": {
-        "operationId": "UserService_UpdatePassword",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1UpdatePasswordResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/v1UpdatePasswordRequest"
-            }
-          }
-        ],
-        "tags": [
-          "UserService"
-        ]
-      }
-    },
-    "/api/v1/user/profile": {
-      "post": {
-        "operationId": "UserService_UpdateProfile",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1UpdateProfileResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/v1UpdateProfileRequest"
-            }
-          }
-        ],
-        "tags": [
-          "UserService"
-        ]
-      }
-    },
-    "/api/v1/user/username/{username}": {
-      "get": {
-        "operationId": "UserService_GetUserByUserName",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1GetUserByUserNameResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "username",
+            "name": "subject",
             "in": "path",
             "required": true,
             "type": "string"
@@ -3220,27 +3126,6 @@
           "type": "integer",
           "format": "int32"
         },
-        "email": {
-          "type": "string"
-        },
-        "username": {
-          "type": "string"
-        },
-        "password": {
-          "type": "string"
-        },
-        "firstName": {
-          "type": "string"
-        },
-        "lastName": {
-          "type": "string"
-        },
-        "isProtected": {
-          "type": "boolean"
-        },
-        "needsPasswordChange": {
-          "type": "boolean"
-        },
         "groupIds": {
           "type": "array",
           "items": {
@@ -3268,27 +3153,6 @@
         "organizationId": {
           "type": "integer",
           "format": "int32"
-        },
-        "email": {
-          "type": "string"
-        },
-        "username": {
-          "type": "string"
-        },
-        "password": {
-          "type": "string"
-        },
-        "firstName": {
-          "type": "string"
-        },
-        "lastName": {
-          "type": "string"
-        },
-        "isProtected": {
-          "type": "boolean"
-        },
-        "needsPasswordChange": {
-          "type": "boolean"
         },
         "createdAt": {
           "type": "string",
@@ -3675,28 +3539,6 @@
         }
       }
     },
-    "v1GetUserByEmailResponse": {
-      "type": "object",
-      "properties": {
-        "user": {
-          "$ref": "#/definitions/v1UserRecord"
-        },
-        "groups": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/v1GroupRecord"
-          }
-        },
-        "roles": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/v1RoleRecord"
-          }
-        }
-      }
-    },
     "v1GetUserByIdResponse": {
       "type": "object",
       "properties": {
@@ -3719,7 +3561,7 @@
         }
       }
     },
-    "v1GetUserByUserNameResponse": {
+    "v1GetUserBySubjectResponse": {
       "type": "object",
       "properties": {
         "user": {
@@ -4485,37 +4327,6 @@
     "v1SyncRepositoriesResponse": {
       "type": "object"
     },
-    "v1UpdatePasswordRequest": {
-      "type": "object",
-      "properties": {
-        "password": {
-          "type": "string"
-        },
-        "passwordConfirmation": {
-          "type": "string"
-        }
-      }
-    },
-    "v1UpdatePasswordResponse": {
-      "type": "object"
-    },
-    "v1UpdateProfileRequest": {
-      "type": "object",
-      "properties": {
-        "email": {
-          "type": "string"
-        },
-        "firstName": {
-          "type": "string"
-        },
-        "lastName": {
-          "type": "string"
-        }
-      }
-    },
-    "v1UpdateProfileResponse": {
-      "type": "object"
-    },
     "v1UpdateRuleTypeRequest": {
       "type": "object",
       "properties": {
@@ -4550,10 +4361,7 @@
         "email": {
           "type": "string"
         },
-        "username": {
-          "type": "string"
-        },
-        "password": {
+        "identitySubject": {
           "type": "string"
         },
         "firstName": {
@@ -4561,12 +4369,6 @@
         },
         "lastName": {
           "type": "string"
-        },
-        "isProtected": {
-          "type": "boolean"
-        },
-        "needsPasswordChange": {
-          "type": "boolean"
         },
         "createdAt": {
           "type": "string",
